Added hero placeholder image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,17 @@ body {
   padding: 3px;
 }
 
+/* Hero Image */
+#hero_image {
+  background-image: url(/assets/images/placeholder.jpg);
+  height: 91vh;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* padding-top: 80px; */
+}
+
 /* Main Footer */
 #main_footer {
   background-color: #bba14f;
